--- a/dashboard.html
+++ b/dashboard.html
@@ -72,7 +72,7 @@
 <body>
   <aside>
     <h2>شيخ العرب</h2>
-    <a href="#"><i class="fas fa-box"></i> إدارة المنتجات</a>
+    <a href="products.html"><i class="fas fa-box"></i> إدارة المنتجات</a>
     <a href="#"><i class="fas fa-cash-register"></i> نقطة البيع</a>
     <a href="#"><i class="fas fa-users"></i> العملاء</a>
     <a href="#"><i class="fas fa-chart-line"></i> التقارير</a>
