--- a/dashboard.html
+++ b/dashboard.html
@@ -73,7 +73,7 @@
   <aside>
     <h2>شيخ العرب</h2>
     <a href="products.html"><i class="fas fa-box"></i> إدارة المنتجات</a>
-    <a href="#"><i class="fas fa-cash-register"></i> نقطة البيع</a>
+    <a href="pos.html"><i class="fas fa-cash-register"></i> نقطة البيع</a>
     <a href="#"><i class="fas fa-users"></i> العملاء</a>
     <a href="#"><i class="fas fa-chart-line"></i> التقارير</a>
     <a href="#"><i class="fas fa-cog"></i> الإعدادات</a>
